# car-api

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml  setup.cfg
 client/: index.html
backend/: manage.py
backend/configs/: asgi.py  celery.py  routing.py  settings.py  urls.py
backend/core/: pagination.py
backend/templates/: base.html  recovery_password.html  register.html  test.html
client/: asset-manifest.json  index.html
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js  router.js
mysql_db/: auto.cnf  binlog.000001  binlog.000002  binlog.000003  binlog.000004  binlog.000005  binlog.000006  binlog.000007  binlog.000008  binlog.000009  binlog.000010  binlog.000011  binlog.000012  binlog.000013  binlog.000014  binlog.000015  binlog.000016  binlog.000017  binlog.000018  binlog.000019  binlog.000020  binlog.000021  binlog.000022  binlog.000023  binlog.000024  binlog.000025  binlog.000026  binlog.000027  binlog.000028  binlog.000029  binlog.000030  binlog.000031  binlog.000032  binlog.000033  binlog.000034  binlog.000035  binlog.000036  ca-key.pem  ca.pem  client-cert.pem  (+7 more)
mysql_db/#innodb_redo/: #ib_redo12
mysql_db/cars/: auth_group.ibd  auth_group_permissions.ibd  auth_permission.ibd  auth_user.ibd  auth_user_groups.ibd  auth_user_user_permissions.ibd  auto_parks.ibd  car_photos.ibd  cars.ibd  django_celery_beat_clockedschedule.ibd  django_celery_beat_crontabschedule.ibd  django_celery_beat_intervalschedule.ibd  django_celery_beat_periodictask.ibd  django_celery_beat_periodictasks.ibd  (+9 more)
(+175 files in other folders)
